create a test for WordCounterController

--- a/WordCounter/Views/WordCounter/Form.cshtml
+++ b/WordCounter/Views/WordCounter/Form.cshtml
@@ -1,7 +1,7 @@
 <h1>WordCounter</h1>
 <form action="/WordCounter/WordCount" method="post">
   <label for="newSentence">Give me a sentence to search</label>
-  <input id="newSentence" name="newSentence" type="text">
+  <input id="newSentence" name="newSentence" type="text"><br>
   <label for="newWord">Give me a word to search the sentence and I will count it for you!</label>
   <input id="newWord" name="newWord" type="text">
   <button type="submit">Submit</button>
