created a test for the view of Result

--- a/WordCounter/Views/WordCounter/Form.cshtml
+++ b/WordCounter/Views/WordCounter/Form.cshtml
@@ -1,5 +1,5 @@
 <h1>WordCounter</h1>
-<form action="/WordCounter/WordCount" method="post">
+<form action="/WordCounter/Result" method="post">
   <label for="newSentence">Give me a sentence to search</label>
   <input id="newSentence" name="newSentence" type="text"><br>
   <label for="newWord">Give me a word to search the sentence and I will count it for you!</label>
