--- a/WordCounter/Views/Home/Index.cshtml
+++ b/WordCounter/Views/Home/Index.cshtml
@@ -1,2 +1,3 @@
 <h1>Welcome to WordCounter!</h1>
 <a href="/WordCounter/Form">Click to Count a WORD!</a>
+<a href="/WordCounter/Result"> Previous Results</a>
