--- a/WordCounter/Views/WordCounter/Form.cshtml
+++ b/WordCounter/Views/WordCounter/Form.cshtml
@@ -6,3 +6,4 @@
   <input id="newWord" name="newWord" type="text">
   <button type="submit">Submit</button>
 </form>
+<a href="/">Go Back to Home Page</a>
