--- a/WordCounter/Views/WordCounter/Result.cshtml
+++ b/WordCounter/Views/WordCounter/Result.cshtml
@@ -1,4 +1,3 @@
 <h1>Results</h1>
-<ul>
-  <li>@Model.GetWord()</li>
-</ul>
+<p>@Model.GetWord() occurred @Model.SearchWord() time(s).</p>
+<a href="/WordCounter/Form">Try Another Word</a>
