added a new test to make sure special charcaters was functioning appropriatly

--- a/WordCounter/Views/Home/Index.cshtml
+++ b/WordCounter/Views/Home/Index.cshtml
@@ -1,2 +1,6 @@
+<head>
+<link href="~/Content/styles.css" rel="stylesheet" type="text/css" />
+</head>
+
 <h1>Welcome to WordCounter!</h1>
 <a href="/WordCounter/Form">Click to Count a WORD!</a><br>
